# infoNN

./: .gitignore  README.md  code.7z  main.py  pyproject.toml  ziper.ps1
configs/infonet/: config.yaml
notebooks/: index.py
notebooks/info/: index.ipynb  lenet copy.ipynb  lenet.ipynb
notebooks/learn/: Info.ipynb  char1.ipynb  char2.ipynb  char3_cnn.ipynb  example.ipynb  index.ipynb
notebooks/learn/lightning_logs/version_0/: metrics.csv
notebooks/learn/lightning_logs/version_0/checkpoints/: epoch=2-step=2814.ckpt
notebooks/learn/lightning_logs/version_1/: hparams.yaml  metrics.csv
notebooks/learn/lightning_logs/version_1/checkpoints/: epoch=3-step=3752.ckpt
notebooks/learn/lightning_logs/version_2/: hparams.yaml  metrics.csv
notebooks/learn/lightning_logs/version_2/checkpoints/: epoch=7-step=3128.ckpt
notebooks/learn/lightning_logs/version_3/: hparams.yaml  metrics.csv
notebooks/learn/lightning_logs/version_3/checkpoints/: epoch=6-step=2737.ckpt
notebooks/learn/lightning_logs/version_4/: metrics.csv
notebooks/learn/lightning_logs/version_4/checkpoints/: epoch=17-step=7038.ckpt
notebooks/learn/lightning_logs/version_5/: metrics.csv
notebooks/learn/lightning_logs/version_6/: metrics.csv
notebooks/learn/lightning_logs/version_6/checkpoints/: epoch=0-step=391.ckpt
notebooks/learn/lightning_logs/version_7/: metrics.csv
notebooks/learn/lightning_logs/version_7/checkpoints/: epoch=9-step=3910.ckpt
notebooks/learn/lightning_logs/version_8/: metrics.csv
notebooks/learn/lightning_logs/version_9/: metrics.csv
notebooks/learn/mi_analysis/: lenet_cifar10_v1_mi_results.csv  lenet_cifar10_v1_summary.txt  lenet_cifar10_v2_mi_results.csv
src/infonet/: infer.py  infer_light.py
src/infonet/model/: attention_block.py  decoder.py  decoder_pl.py  encoder.py  encoder_pl.py  gauss_mild.py  gauss_mild_pl.py  infonet.py  infonet_pl.py  query.py  query_pl.py
src/utils/: dataset.py
src/utils/math/: myfunc.py
src/utils/model/: base.py  callback.py  light.py
